--- a/css/style.css
+++ b/css/style.css
@@ -119,10 +119,9 @@ footer {
 
 #copyright {
     text-align: center;
-    margin-top: -20px;
-    margin-bottom: -10px;
     font-size: 12px;
     color: #666666;
+    margin: 0;
 }
 
 
@@ -161,7 +160,6 @@ footer {
 /*-------------------| Error pages |-------------------*/
 #error #main {
     color: #3e3e3e;
-    text-align: left;
     margin: 0;
     padding: 80px;
     text-align: center;
